# gauth

./: Cargo.toml  Changes.md  README.md  gauth_data.json
.github/workflows/: release.yaml
src/: main.rs  modules.rs
src/modules/: args.rs  auth.rs  command.rs  error.rs  secrets.rs  ui.rs
src/modules/auth/: add.rs  del.rs  list.rs  show.rs
