[package]
name = "gauth"
version = "0.1.0"
edition = "2024"

[dependencies]
base32 = "0.5.1"
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }
thiserror = "1.0"
aes-gcm = { version = "0.10.1", features = ["aes"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand_chacha = "0.3.1"
chacha20poly1305 = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"
dirs = "5.0.1"
sha2 = "0.10.8"
totp-rs = "5.7.0"
indicatif = "0.17.8"
